crates/weaver-e2e/tests/snapshots/rewrite_snapshots__rewrite_rust_struct_to_enum.snap
---
source: crates/weaver-e2e/tests/rewrite_snapshots.rs
expression: result
---
RewriteSnapshot {
    output: "enum Empty {}",
    num_replacements: 1,
    has_changes: true,
}
