crates/weaver-e2e/tests/snapshots/rewrite_snapshots__rewrite_typescript_console_to_logger.snap
---
source: crates/weaver-e2e/tests/rewrite_snapshots.rs
expression: result
---
RewriteSnapshot {
    output: "function logMessages(): void {\n    console.log(\"Starting\");\n    console.log(\"Processing\", 42);\n    console.log(\"Done\");\n}\n",
    num_replacements: 0,
    has_changes: false,
}
