crates/weaver-e2e/tests/snapshots/rewrite_snapshots__rewrite_typescript_function_rename.snap
---
source: crates/weaver-e2e/tests/rewrite_snapshots.rs
expression: result
---
RewriteSnapshot {
    output: "function oldName(): void {\n    console.log(\"old\");\n}\noldName();\n",
    num_replacements: 0,
    has_changes: false,
}
