crates/weaver-e2e/tests/snapshots/rewrite_snapshots__rewrite_typescript_var_to_const.snap
---
source: crates/weaver-e2e/tests/rewrite_snapshots.rs
expression: result
---
RewriteSnapshot {
    output: "function oldStyle(): void {\n    var x = 1;\n    var y = 2;\n    var result = x + y;\n    console.log(result);\n}\n",
    num_replacements: 0,
    has_changes: false,
}
